hamburger icon finished!

--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
   </head>
   <body>
     <header class="navbar">
-      <div class="hamburger">
-        <div class="row1 row">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
+      <nav>
+        <div class="hamburger">
+          <div class="row1 row">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+          <div class="row2 row">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+          <div class="row3 row">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
         </div>
-        <div class="row2 row">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-        <div class="row3 row">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-      </div>
+      </nav>
     </header>
   </body>
 </html>
