profile google picture added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             <div class="line"></div>
           </div>
         </div>
+        <div class="profile-picture">
+          <a href=""
+            ><img
+              src="./icons/google-profile-picture.png"
+              alt="google profile picture"
+          /></a>
+        </div>
       </nav>
     </header>
   </body>
