The structuring and adding elements is done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <header class="navbar">
       <nav>
+        <ul>
+          <li><a href="#"></a>Gmail</li>
+          <div class="images-link-container">
+            <li><a href="#"></a>Images</li>
+          </div>
+        </ul>
         <div class="hamburger">
           <div class="row1 row">
             <div class="line"></div>
