google navbar complete!

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="navbar">
       <nav>
         <ul>
-          <li><a href="#"></a>Gmail</li>
+          <li><a href="#">Gmail</a></li>
           <div class="images-link-container">
-            <li><a href="#"></a>Images</li>
+            <li><a href="#">Images</a></li>
           </div>
         </ul>
         <div class="hamburger">
