--- a/index.html
+++ b/index.html
@@ -47,18 +47,22 @@
           <img src="./images/google-logo.png" alt="" />
         </div>
         <form>
-          <label for="search">
-            <svg xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-              ></path>
-            </svg>
-          </label>
-          <input type="text" name="search" id="search" />
-          <div class="microphone-icon">
-            <a href="#"><img src="./icons/microphone.png" alt="" /></a>
+          <div class="search-bar">
+            <label>
+              <input type="text" name="search" id="search" />
+            </label>
+            <div class="microphone-icon">
+              <a href="#"><img src="./icons/microphone.png" alt="" /></a>
+            </div>
+          </div>
+          <div class="input-buttons">
+            <input type="button" value="Google Search" />
+            <input type="button" value="I'm Feeling Lucky" />
           </div>
         </form>
+        <div class="language-option">
+          <p>Google offered in: <a href="#">svenska</a></p>
+        </div>
       </div>
     </section>
   </body>
