Google frontpage done!

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <input type="button" value="Google Search" />
             <input type="button" value="I'm Feeling Lucky" />
           </div>
+          <div class="language-option">
+            <p>Google offered in:&nbsp;<a href="#"> svenska</a></p>
+          </div>
         </form>
-        <div class="language-option">
-          <p>Google offered in: <a href="#">svenska</a></p>
-        </div>
       </div>
     </section>
   </body>
