--- a/index.html
+++ b/index.html
@@ -60,10 +60,30 @@
             <input type="button" value="I'm Feeling Lucky" />
           </div>
           <div class="language-option">
-            <p>Google offered in:&nbsp;<a href="#"> svenska</a></p>
+            <p>Google offered in:&nbsp;&nbsp;<a href="#">svenska</a></p>
           </div>
         </form>
       </div>
     </section>
+    <footer>
+      <div class="display-language-border">
+        <div class="display-language">
+          <p>Sweden</p>
+        </div>
+      </div>
+      <div class="display-links">
+        <ul class="left-content">
+          <li><a href="#">Advertising</a></li>
+          <li><a href="#">Business</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">How Search works</a></li>
+        </ul>
+        <ul class="right-content">
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
