footer is now responsive!

--- a/index.html
+++ b/index.html
@@ -72,17 +72,21 @@
         </div>
       </div>
       <div class="display-links">
-        <ul class="left-content">
-          <li><a href="#">Advertising</a></li>
-          <li><a href="#">Business</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">How Search works</a></li>
-        </ul>
-        <ul class="right-content">
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Settings</a></li>
-        </ul>
+        <div class="left-display-links">
+          <ul class="left-content content">
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">How Search works</a></li>
+          </ul>
+        </div>
+        <div class="right-display-links">
+          <ul class="right-content content">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
